--- a/package.json
+++ b/package.json
@@ -1,98 +1,32 @@
 {
-  "__IMPORTANT__": "This file won't be published. See `src/ckeditor/package.json`, which will be published on NPM.",
   "name": "@ckeditor/ckeditor5-angular",
   "version": "4.0.4",
-  "private": true,
   "description": "Official Angular component for CKEditor 5 – the best browser-based rich text editor.",
-  "scripts": {
-    "start": "ng serve --open",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "coverage": "ng test --watch=false --code-coverage",
-    "lint": "eslint \"*/**/*.+(js|ts)\"",
-    "e2e": "ng e2e",
-    "changelog": "node ./scripts/changelog.js",
-    "build-package": "node ./scripts/build-package.js",
-    "release": "node ./scripts/release.js",
-    "postversion": "npm run build-package",
-    "build-ckeditor": "cd ckeditor && webpack --mode production"
+  "keywords": [
+    "wysiwyg",
+    "rich text",
+    "editor",
+    "html",
+    "contentEditable",
+    "editing",
+    "angular",
+    "angular2",
+    "angular 5",
+    "ng",
+    "component",
+    "ckeditor",
+    "ckeditor5",
+    "ckeditor 5"
+  ],
+  "peerDependencies": {
+    "@angular/core": ">=9.0.0",
+    "@angular/common": ">=9.0.0",
+    "@angular/forms": ">=9.0.0",
+    "rxjs": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^11.0.7",
-    "@angular/common": "^11.0.7",
-    "@angular/compiler": "^11.0.7",
-    "@angular/core": "^11.0.7",
-    "@angular/forms": "^11.0.7",
-    "@angular/platform-browser": "^11.0.7",
-    "@angular/platform-browser-dynamic": "^11.0.7",
-    "@angular/router": "^11.0.7",
-    "core-js": "^3.21.1",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.3",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.18",
-    "@angular/cli": "^11.0.7",
-    "@angular/compiler-cli": "^11.0.7",
-    "@angular/language-service": "^11.0.7",
-    "@ckeditor/ckeditor5-adapter-ckfinder": "^34.0.0",
-    "@ckeditor/ckeditor5-autoformat": "^34.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^34.0.0",
-    "@ckeditor/ckeditor5-block-quote": "^34.0.0",
-    "@ckeditor/ckeditor5-ckfinder": "^34.0.0",
-    "@ckeditor/ckeditor5-cloud-services": "^34.0.0",
-    "@ckeditor/ckeditor5-core": "^34.0.0",
-    "@ckeditor/ckeditor5-dev-env": "^30.1.0",
-    "@ckeditor/ckeditor5-dev-utils": "^30.1.0",
-    "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.1.0",
-    "@ckeditor/ckeditor5-easy-image": "^34.0.0",
-    "@ckeditor/ckeditor5-editor-classic": "^34.0.0",
-    "@ckeditor/ckeditor5-essentials": "^34.0.0",
-    "@ckeditor/ckeditor5-heading": "^34.0.0",
-    "@ckeditor/ckeditor5-image": "^34.0.0",
-    "@ckeditor/ckeditor5-indent": "^34.0.0",
-    "@ckeditor/ckeditor5-link": "^34.0.0",
-    "@ckeditor/ckeditor5-list": "^34.0.0",
-    "@ckeditor/ckeditor5-media-embed": "^34.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^34.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^34.0.0",
-    "@ckeditor/ckeditor5-table": "^34.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^34.0.0",
     "@ckeditor/ckeditor5-watchdog": "^34.0.0",
-    "@types/jasmine": "~3.10.3",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^14.11.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "coveralls": "^3.1.1",
-    "css-loader": "^5.2.7",
-    "eslint": "^7.11.0",
-    "eslint-config-ckeditor5": "^4.0.0",
-    "fs-extra": "^10.0.1",
-    "husky": "^4.3.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.17",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "lint-staged": "^10.4.0",
-    "ng-packagr": "^11.0.3",
-    "postcss-loader": "^4.3.0",
-    "raw-loader": "^4.0.1",
-    "protractor": "~7.0.0",
-    "style-loader": "^2.0.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~4.0.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.9.2"
-  },
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=5.7.1"
+    "tslib": "^2.0.0"
   },
   "author": "CKSource (http://cksource.com/)",
   "license": "GPL-2.0-or-later",
@@ -102,20 +36,12 @@
     "type": "git",
     "url": "https://github.com/ckeditor/ckeditor5-angular.git"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.+(js|ts)": [
-      "eslint --quiet"
-    ]
-  },
-  "eslintIgnore": [
-    "**/node_modules/**",
-    "**/dist/**",
-    "src/polyfills.ts",
-    "ckeditor/**"
-  ]
+  "main": "bundles/ckeditor-ckeditor5-angular.umd.js",
+  "module": "fesm2015/ckeditor-ckeditor5-angular.js",
+  "es2015": "fesm2015/ckeditor-ckeditor5-angular.js",
+  "esm2015": "esm2015/ckeditor-ckeditor5-angular.js",
+  "fesm2015": "fesm2015/ckeditor-ckeditor5-angular.js",
+  "typings": "ckeditor-ckeditor5-angular.d.ts",
+  "metadata": "ckeditor-ckeditor5-angular.metadata.json",
+  "sideEffects": false
 }
